Simple sticky footer fix
* For now, force page lists to a certain height to prevent footer from
riding up. A short list also looks odd at the moment.

--- a/themes/sam-and-paul/source/css/master.css
+++ b/themes/sam-and-paul/source/css/master.css
@@ -445,6 +445,7 @@ a.inherit {
   background: rgba(0,0,0,0.25);
   margin-bottom: 48px;
   border-radius: 3px;
+  min-height: 400px;
 }
 
 .listing-item {
